Add description on home page

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
          <hr />
 
-         <div class="card">
+         <div class="card mb-3">
             <div class="card-body">
                <h5 class="card-title">Counter: <span id="counter"></span></h5>
                <button class="btn btn-primary" id="add">Add</button>
@@ -35,6 +35,28 @@
                </button>
             </div>
          </div>
+         <p class="lead">
+            This is a simple application for demonstrating the work of redax
+            using the native language.
+         </p>
+         <p>
+            <small
+               >The add and subtract buttons work synchronously and add /
+               subtract one to our counter at once.</small
+            >
+         </p>
+         <p>
+            <small
+               >The button for asynchronous addition and asynchronous
+               subtraction work asynchronously and add / subtract one to our
+               counter in a second and a half.</small
+            >
+         </p>
+         <p>
+            The application uses "redux logger" to watch state changes in real
+            time. To see the result of his work, open the developer console with
+            the keys <mark>Ctrl + Shift + I</mark>
+         </p>
       </div>
       <script
          src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
